mini refactor